--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node ./scripts/postbuild.mjs",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
-    "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts"
+    "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
+    "sentry": "sentry-wizard"
   },
   "dependencies": {
     "@next/bundle-analyzer": "14.0.3",
@@ -20,6 +21,8 @@
     "esbuild": "0.18.11",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
+    "gulp": "^4.0.2",
+    "gulp-real-favicon": "^0.3.2",
     "image-size": "1.0.0",
     "next": "14.0.3",
     "next-contentlayer": "0.3.4",
