--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # visit https://giscus.app to get your Giscus ids
-NEXT_PUBLIC_GISCUS_REPO=
-NEXT_PUBLIC_GISCUS_REPOSITORY_ID=
-NEXT_PUBLIC_GISCUS_CATEGORY=
-NEXT_PUBLIC_GISCUS_CATEGORY_ID=
+NEXT_PUBLIC_GISCUS_REPO=uniskela/uniskela-site
+NEXT_PUBLIC_GISCUS_REPOSITORY_ID=R_kgDOLHbK2w
+NEXT_PUBLIC_GISCUS_CATEGORY=General
+NEXT_PUBLIC_GISCUS_CATEGORY_ID=DIC_kwDOLHbK284CckjR
 NEXT_PUBLIC_UTTERANCES_REPO=
 NEXT_PUBLIC_DISQUS_SHORTNAME=
 
@@ -17,8 +17,8 @@ CONVERTKIT_API_KEY=
 # curl https://api.convertkit.com/v3/forms?api_key=<your_public_api_key> to get your form ID
 CONVERTKIT_FORM_ID=
 
-KLAVIYO_API_KEY=
-KLAVIYO_LIST_ID=
+KLAVIYO_API_KEY=pk_597572a3cb91a305184843f883ed9f01d3
+KLAVIYO_LIST_ID=VQxrD2
 
 REVUE_API_KEY=
 
