--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
+    "@iconify/icons-line-md": "^1.2.30",
+    "@iconify/icons-material-symbols": "^1.2.58",
+    "@iconify/react": "^4.1.1",
     "@svgr/webpack": "^8.0.1",
     "@types/mdx": "^2.0.5",
     "@types/react": "^18.2.14",
